--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,29 +8,29 @@
 
 <body>
   
-  <%- include('includes/index/siteheader.ejs') %>
+  <%- include('./includes/index/siteheader.ejs') %>
 
-  <%- include('includes/navegacion.ejs') %>
+  <%- include('./includes/navegacion.ejs') %>
 
   <%- include('./includes/index/anuncio.ejs') %>
 
-  <%- include('includes/index/programa.ejs') %>
+  <%- include('./includes/index/programa.ejs') %>
 
-  <%- include('includes/index/invitados.ejs') %>
+  <%- include('./includes/index/invitados.ejs') %>
 
-  <%- include('includes/index/contador.ejs') %>
+  <%- include('./includes/index/contador.ejs') %>
 
-  <%- include('includes/index/precios.ejs') %>
+  <%- include('./includes/index/precios.ejs') %>
 
   <%- include('./includes/index/mapa.ejs') %>
 
-  <%- include('includes/index/testimoniales.ejs') %>
+  <%- include('./includes/index/testimoniales.ejs') %>
 
-  <%- include('includes/index/newsletter.ejs') %>
+  <%- include('./includes/index/newsletter.ejs') %>
 
   <%- include('./includes/index/countdown.ejs') %>
   
-  <%- include('includes/footer.ejs') %>
+  <%- include('./includes/footer.ejs') %>
   
   <script src="js/index.js"></script>
 </body>
