--- a/views/conferencia.ejs
+++ b/views/conferencia.ejs
@@ -1,51 +1,53 @@
 <%- include('./includes/head.ejs') %>
+  <link rel="stylesheet" href="css/tobii.min.css">
 </head>
 <body>
 
   <%- include('./includes/navegacion.ejs') %>
 
   <%- include('./includes/index/anuncio.ejs') %>
+
   
-    <section class="section contenedor">
-      <h2>Galería de fotos</h2>
-      <div class="galeria">
+  <section class="section contenedor">
+    <h2>Galería de fotos</h2>
+
+    <div class="galeria">
+
+      <a href="img/galeria/01.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/01.jpg" alt="imagen1">
+      </a>
+      <a href="img/galeria/02.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/02.jpg" alt="imagen2">
+      </a>
+      <a href="img/galeria/03.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/03.jpg" alt="imagen3">
+      </a>
+      <a href="img/galeria/04.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/04.jpg" alt="imagen4">
+      </a>
+      <a href="img/galeria/05.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/05.jpg" alt="imagen5">
+      </a>
+      <a href="img/galeria/06.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/06.jpg" alt="imagen6">
+      </a>
+      <a href="img/galeria/07.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/07.jpg" alt="imagen7">
+      </a>
+      <a href="img/galeria/08.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/08.jpg" alt="imagen8">
+      </a>
+      <a href="img/galeria/09.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/09.jpg" alt="imagen9">
+      </a>
+      <a href="img/galeria/10.jpg" class="lightbox" >
+        <img src="img/galeria/thumbs/10.jpg" alt="imagen10">
+      </a>
+    </div>
+  </section>
   
-        <a data-fslightbox href="img/galeria/01.jpg">
-          <img src="img/galeria/thumbs/01.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/02.jpg">
-          <img src="img/galeria/thumbs/02.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/03.jpg">
-          <img src="img/galeria/thumbs/03.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/04.jpg">
-          <img src="img/galeria/thumbs/04.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/05.jpg">
-          <img src="img/galeria/thumbs/05.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/06.jpg">
-          <img src="img/galeria/thumbs/06.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/07.jpg">
-          <img src="img/galeria/thumbs/07.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/08.jpg">
-          <img src="img/galeria/thumbs/08.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/09.jpg">
-          <img src="img/galeria/thumbs/09.jpg">
-        </a>
-        <a data-fslightbox href="img/galeria/10.jpg">
-          <img src="img/galeria/thumbs/10.jpg">
-        </a>
-      </div>
-    </section>
-  
-    <%- include('./includes/footer.ejs') %>
-    
-  <script src="js/fslightbox.js"></script>
+  <%- include('./includes/footer.ejs') %>
+  <script src="js/tobii.min.js"></script>
   <script type="text/javascript" src="js/conferencia.js"></script>
 </body>
 </html>
