--- a/views/includes/navegacion.ejs
+++ b/views/includes/navegacion.ejs
@@ -15,9 +15,9 @@
       </div>
       
       <nav class="navegacion-principal ocultar">
-        <a href="/conferencia">Conferencia</a>
-        <a href="#">Calendario</a>
-        <a href="#">Invitados</a>
+        <a href="/conferencias">Conferencias</a>
+        <a href="/calendario">Calendario</a>
+        <a href="/invitados">Invitados</a>
         <a href="/registro">Reservaciones</a>
       </nav>
     </div>
