se termino pagina invitados

--- a/views/conferencias.ejs
+++ b/views/conferencias.ejs
@@ -48,6 +48,6 @@
   
   <%- include('./includes/footer.ejs') %>
   <script src="js/tobii.min.js"></script>
-  <script type="text/javascript" src="js/conferencia.js"></script>
+  <script> const tobii = new Tobii() </script>
 </body>
 </html>
