--- a/public/css/main.css
+++ b/public/css/main.css
@@ -373,6 +373,20 @@ p {
     .invitados .lista-invitados .invitado p {
       padding: 1.5rem 1rem; } }
 
+.invitado-modal {
+  max-width: 40rem;
+  width: 100%; }
+  .invitado-modal .invitado-info {
+    margin: 0 auto;
+    padding-top: 2rem;
+    text-align: center;
+    background-color: #e1e1e1; }
+    .invitado-modal .invitado-info p {
+      padding: 2rem;
+      color: black; }
+    .invitado-modal .invitado-info img {
+      padding: .5rem; }
+
 .contador {
   position: relative; }
   .contador#bg-img {
