--- a/scss/main.scss
+++ b/scss/main.scss
@@ -332,6 +332,24 @@
   }
 }
 
+.invitado-modal {
+  max-width: 40rem;
+  width:100%;
+  .invitado-info{
+    margin: 0 auto;
+            padding-top: 2rem; 
+            text-align:center;
+            background-color: #e1e1e1;
+    p{
+      padding: 2rem; 
+      color:black;
+    }
+    img{
+      padding: .5rem;
+    }
+  }
+}
+
 // * Contador ../img/bg-resumen.jpg
 .contador{
   position: relative;
