--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -7,23 +7,23 @@
   <!-- * REGISTRO DE USUARIOS -->
   <section class="seccion contenedor">
     <h2>Registro de usuarios</h2>
-    <form action="index.html" method="POST" id="registro" class="registro">
+    <form action="/validar_registro" method="POST" id="registro" class="registro">
       
       <div id="datos-usuarios" class="registro caja">
 
         <div class="campo">
           <label for="nombre">Nombre</label>
-          <input type="text" name="nombre" id="nombre" placeholder="Tu nombre">
+          <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" value="Luis">
         </div>
   
         <div class="campo">
           <label for="apellido">Apellido</label>
-          <input type="text" name="apellido" id="apellido" placeholder="Tu nombre">
+          <input type="text" name="apellido" id="apellido" placeholder="Tu nombre" value="Fuentes">
         </div>
   
         <div class="campo">
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" >
+          <input type="email" name="email" id="email"  value="fuentesld@gmail.com">
         </div>
         <div id="error"></div>
 
@@ -43,7 +43,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                 <div class="orden">
                   <label for="pase-dia">Boletos</label>
-                  <input type="number" id="pase-dia" name="pase-dia" placeholder ="0" size="3">
+                  <input type="number" id="pase-dia" name="boletos" placeholder ="0" size="3" value="1">
                   
                 </div>
               </ul>
@@ -59,7 +59,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                   <div class="orden">
                     <label for="pase-completo">Boletos</label>
-                    <input type="number" id="pase-completo" name="pase-completo" placeholder = "0" size="3">
+                    <input type="number" id="pase-completo" name="boletos" placeholder = "0" size="3">
                   </div>
               </ul>
             </div>
@@ -74,7 +74,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                 <div class="orden">
                   <label for="pase-dosdias">Boletos</label>
-                  <input type="number" id="pase-dosdias" name="pase-dosdias" placeholder = "0" size="3">
+                  <input type="number" id="pase-dosdias" name="boletos" placeholder = "0" size="3" value="2">
                 </div>
               </ul>
             </div>
@@ -90,21 +90,21 @@
             <div class="contenidos-dia">
               <div class="contenido-dia">
                 <p>Talleres:</p>
-                <label><input type="checkbox" name="registro[]" id="taller_01" value="taller_01"><time>10:00</time> Responsive Web Design</label>
-                <label><input type="checkbox" name="registro[]" id="taller_02" value="taller_02"><time>12:00</time> Flexbox</label>
-                <label><input type="checkbox" name="registro[]" id="taller_03" value="taller_03"><time>14:00</time> HTML5 y CSS3</label>
-                <label><input type="checkbox" name="registro[]" id="taller_04" value="taller_04"><time>17:00</time> Drupal</label>
-                <label><input type="checkbox" name="registro[]" id="taller_05" value="taller_05"><time>19:00</time> WordPress</label>
+                <label><input type="checkbox" name="registro" id="taller_01" value="taller_01" checked><time>10:00</time> Responsive Web Design</label>
+                <label><input type="checkbox" name="registro" id="taller_02" value="taller_02"><time>12:00</time> Flexbox</label>
+                <label><input type="checkbox" name="registro" id="taller_03" value="taller_03" checked><time>14:00</time> HTML5 y CSS3</label>
+                <label><input type="checkbox" name="registro" id="taller_04" value="taller_04"><time>17:00</time> Drupal</label>
+                <label><input type="checkbox" name="registro" id="taller_05" value="taller_05" checked><time>19:00</time> WordPress</label>
               </div>
               <div class="contenido-dia">
                 <p>Conferencias:</p>
-                <label><input type="checkbox" name="registro[]" id="conf_01" value="conf_01"><time>10:00</time> Como ser Freelancer</label>
-                <label><input type="checkbox" name="registro[]" id="conf_02" value="conf_02"><time>17:00</time> Tecnologías del Futuro</label>
-                <label><input type="checkbox" name="registro[]" id="conf_03" value="conf_03"><time>19:00</time> Seguridad en la Web</label>
+                <label><input type="checkbox" name="registro" id="conf_01" value="conf_01"><time>10:00</time> Como ser Freelancer</label>
+                <label><input type="checkbox" name="registro" id="conf_02" value="conf_02"><time>17:00</time> Tecnologías del Futuro</label>
+                <label><input type="checkbox" name="registro" id="conf_03" value="conf_03"><time>19:00</time> Seguridad en la Web</label>
               </div>
               <div class="contenido-dia">
                 <p>Seminarios:</p>
-                <label><input type="checkbox" name="registro[]" id="sem_01" value="sem_01"><time>10:00</time> Diseño UI y UX para móviles</label>
+                <label><input type="checkbox" name="registro" id="sem_01" value="sem_01"><time>10:00</time> Diseño UI y UX para móviles</label>
               </div>
             </div>
           </div> <!--#viernes-->
@@ -114,23 +114,23 @@
 
               <div class="contenido-dia">
                 <p>Talleres:</p>
-                <label><input type="checkbox" name="registro[]" id="taller_06" value="taller_06"><time>10:00</time> AngularJS</label>
-                <label><input type="checkbox" name="registro[]" id="taller_07" value="taller_07"><time>12:00</time> PHP y MySQL</label>
-                <label><input type="checkbox" name="registro[]" id="taller_08" value="taller_08"><time>14:00</time> JavaScript Avanzado</label>
-                <label><input type="checkbox" name="registro[]" id="taller_09" value="taller_09"><time>17:00</time> SEO en Google</label>
-                <label><input type="checkbox" name="registro[]" id="taller_10" value="taller_10"><time>19:00</time> De Photoshop a HTML5 y CSS3</label>
-                <label><input type="checkbox" name="registro[]" id="taller_11" value="taller_11"><time>21:00</time> PHP Medio y Avanzado</label>
+                <label><input type="checkbox" name="registro" id="taller_06" value="taller_06"><time>10:00</time> AngularJS</label>
+                <label><input type="checkbox" name="registro" id="taller_07" value="taller_07"><time>12:00</time> PHP y MySQL</label>
+                <label><input type="checkbox" name="registro" id="taller_08" value="taller_08"><time>14:00</time> JavaScript Avanzado</label>
+                <label><input type="checkbox" name="registro" id="taller_09" value="taller_09"><time>17:00</time> SEO en Google</label>
+                <label><input type="checkbox" name="registro" id="taller_10" value="taller_10"><time>19:00</time> De Photoshop a HTML5 y CSS3</label>
+                <label><input type="checkbox" name="registro" id="taller_11" value="taller_11"><time>21:00</time> PHP Medio y Avanzado</label>
               </div>
               <div class="contenido-dia">
                 <p>Conferencias:</p>
-                <label><input type="checkbox" name="registro[]" id="conf_04" value="conf_04"><time>10:00</time> Como crear una tienda online que venda millones en pocos días</label>
-                <label><input type="checkbox" name="registro[]" id="conf_05" value="conf_05"><time>17:00</time> Los mejores lugares para encontrar trabajo</label>
-                <label><input type="checkbox" name="registro[]" id="conf_06" value="conf_06"><time>19:00</time> Pasos para crear un negocio rentable</label>
+                <label><input type="checkbox" name="registro" id="conf_04" value="conf_04"><time>10:00</time> Como crear una tienda online que venda millones en pocos días</label>
+                <label><input type="checkbox" name="registro" id="conf_05" value="conf_05"><time>17:00</time> Los mejores lugares para encontrar trabajo</label>
+                <label><input type="checkbox" name="registro" id="conf_06" value="conf_06"><time>19:00</time> Pasos para crear un negocio rentable</label>
               </div>
               <div class="contenido-dia">
                 <p>Seminarios:</p>
-                <label><input type="checkbox" name="registro[]" id="sem_02" value="sem_02"><time>10:00</time> Aprende a Programar en una mañana</label>
-                <label><input type="checkbox" name="registro[]" id="sem_03" value="sem_03"><time>17:00</time> Diseño UI y UX para móviles</label>
+                <label><input type="checkbox" name="registro" id="sem_02" value="sem_02"><time>10:00</time> Aprende a Programar en una mañana</label>
+                <label><input type="checkbox" name="registro" id="sem_03" value="sem_03"><time>17:00</time> Diseño UI y UX para móviles</label>
               </div>
             </div>
           </div> <!--#sabado-->
@@ -141,24 +141,24 @@
               <div class="contenido-dia">
                 <p>Talleres:</p>
                 <label>
-                  <input type="checkbox" name="registro[]" id="taller_12" value="taller_12">
+                  <input type="checkbox" name="registro" id="taller_12" value="taller_12">
                   <time>10:00</time> Laravel
                 </label>
-                <label><input type="checkbox" name="registro[]" id="taller_13" value="taller_13"><time>12:00</time> Crea tu propia API</label>
-                <label><input type="checkbox" name="registro[]" id="taller_14" value="taller_14"><time>14:00</time> JavaScript y jQuery</label>
-                <label><input type="checkbox" name="registro[]" id="taller_15" value="taller_15"><time>17:00</time> Creando Plantillas para WordPress</label>
-                <label><input type="checkbox" name="registro[]" id="taller_16" value="taller_16"><time>19:00</time> Tiendas Virtuales en Magento</label>
+                <label><input type="checkbox" name="registro" id="taller_13" value="taller_13"><time>12:00</time> Crea tu propia API</label>
+                <label><input type="checkbox" name="registro" id="taller_14" value="taller_14"><time>14:00</time> JavaScript y jQuery</label>
+                <label><input type="checkbox" name="registro" id="taller_15" value="taller_15"><time>17:00</time> Creando Plantillas para WordPress</label>
+                <label><input type="checkbox" name="registro" id="taller_16" value="taller_16"><time>19:00</time> Tiendas Virtuales en Magento</label>
               </div>
               <div class="contenido-dia">
                 <p>Conferencias:</p>
-                <label><input type="checkbox" name="registro[]" id="conf_07" value="conf_07"><time>10:00</time> Como hacer Marketing en línea</label>
-                <label><input type="checkbox" name="registro[]" id="conf_08" value="conf_08"><time>17:00</time> ¿Con que lenguaje debo empezar?</label>
-                <label><input type="checkbox" name="registro[]" id="conf_09" value="conf_09"><time>19:00</time> Frameworks y librerias Open Source</label>
+                <label><input type="checkbox" name="registro" id="conf_07" value="conf_07"><time>10:00</time> Como hacer Marketing en línea</label>
+                <label><input type="checkbox" name="registro" id="conf_08" value="conf_08"><time>17:00</time> ¿Con que lenguaje debo empezar?</label>
+                <label><input type="checkbox" name="registro" id="conf_09" value="conf_09"><time>19:00</time> Frameworks y librerias Open Source</label>
               </div>
               <div class="contenido-dia">
                 <p>Seminarios:</p>
-                <label><input type="checkbox" name="registro[]" id="sem_04" value="sem_04"><time>14:00</time> Creando una App en Android en una tarde</label>
-                <label><input type="checkbox" name="registro[]" id="sem_05" value="sem_05"><time>17:00</time> Creando una App en iOS en una tarde</label>
+                <label><input type="checkbox" name="registro" id="sem_04" value="sem_04"><time>14:00</time> Creando una App en Android en una tarde</label>
+                <label><input type="checkbox" name="registro" id="sem_05" value="sem_05"><time>17:00</time> Creando una App en iOS en una tarde</label>
               </div>
             </div>
           </div> <!--#domingo-->
@@ -172,19 +172,19 @@
           <div class="extras">
             <div class="orden">
               <label for="camisa-evento">Camisa del evento $10 <small>promoción 7% de dscto.</small></label>
-              <input type="number" name="camisa_evento" id="camisa-evento" min="0" size="3" placeholder="0">
+              <input type="number" name="pedido_camisas" id="camisa-evento" min="0" size="3" placeholder="0" value="1">
             </div>
             <div class="orden">
               <label for="etiquetas">Paquete de 10 etiquetas $2 <small>(HTML, CSS, JavaScript, Chrome)</small></label>
-              <input type="number" name="etiquetas" id="etiquetas" min="0" size="3" placeholder="0">
+              <input type="number" name="pedido_etiquetas" id="etiquetas" min="0" size="3" placeholder="0" value="2">
             </div>
             <div class="orden">
               <label for="regalo">Seleccione un regalo</label>
-              <select id="regalo" required>
+              <select id="regalo" name ="regalo" required>
                 <option value="">--Seleccione un regalo--</option>
-                <option value="ETI">Etiquetas</option>
-                <option value="PUL">Pulseras</option>
-                <option value="PLU">Plumas</option>
+                <option value="1" selected>Etiquetas</option>
+                <option value="0">Pulseras</option>
+                <option value="2">Plumas</option>
               </select>
             </div>
             <div class="resumen-boton">
@@ -197,7 +197,8 @@
             <p>Total:</p>
             <div id="suma-total"></div>
             <div class="resumen-boton">
-              <input type="submit" id="btn-registro" class="btn btn-primario" value="Pagar">
+              <input type="hidden" name="total_pedido" id="total-pedido" value="total_pedido">
+              <input type="submit" id="btn-registro" class="btn btn-primario" name="submit" value="Pagar">
             </div>
           </div>
         </div>
