--- a/views/includes/index/programa.ejs
+++ b/views/includes/index/programa.ejs
@@ -13,17 +13,17 @@
         <h2>Programa del Evento</h2>
         <nav class="menu-programa">
           <% catEventos.forEach(evento =>{%>
-            <a href="#<%= evento.descripcion.toLowerCase() %>"><i class="<%= evento.icono %>"></i> <%= evento.descripcion %></a>
+            <a href="#<%= evento.descripcion_catevento.toLowerCase() %>"><i class="<%= evento.icono_catevento %>"></i> <%= evento.descripcion_catevento %></a>
           <% }) %>
         </nav>
 
         <% catEventos.forEach(evento=> { %>
-          <div id="<%= evento.descripcion.toLowerCase() %>" class="info-curso"> 
-            <% let eventosTemp = eventosDeCategorias.filter(evento1 => evento1.descripcion === evento.descripcion ) 
+          <div id="<%= evento.descripcion_catevento.toLowerCase() %>" class="info-curso"> 
+            <% let eventosTemp = eventosDeCategorias.filter(evento1 => evento1.descripcion_catevento === evento.descripcion_catevento ) 
             eventosTemp.forEach(element => { %>
               
               <div class="detalle-evento">
-                <h3><%= element.nombre %></h3>
+                <h3><%= element.nombre_evento %></h3>
                 <p><i class="far fa-clock"></i> <%= element.horaString %></p>
                 <p><i class="fa fa-calendar"></i> <%= element.fechaString %></p>
                 <p><i class="fa fa-user"></i> <%= element.invitado %></p>
@@ -33,54 +33,6 @@
           </div>
         <% } )%>
 
-        <!--
-        <div id="talleres" class="info-curso">
-          <div class="detalle-evento">
-            <h3>HTML5, CSS3, JavaScript</h3>
-            <p><i class="far fa-clock"></i> 16:00</p>
-            <p><i class="fa fa-calendar"></i> 10 Dic</p>
-            <p><i class="fa fa-user"></i> Luis Fuentes</p>
-          </div>
-          <div class="detalle-evento">
-            <h3>Responsive Web Design</h3>
-            <p><i class="far fa-clock"></i> 20:00</p>
-            <p><i class="fa fa-calendar"></i> 10 Dic</p>
-            <p><i class="fa fa-user"></i> Luis Fuentes</p>
-          </div>
-          <a href="/calendario" class="btn btn-primario">Ver todos</a>
-        </div> -->
-
-        <!-- <div id="conferencias" class="info-curso ocultar">
-          <div class="detalle-evento">
-            <h3>Como ser freelancer</h3>
-            <p><i class="far fa-clock"></i> 10:00</p>
-            <p><i class="fa fa-calendar"></i> 10 Dic</p>
-            <p><i class="fa fa-user"></i> Donna Fuentes</p>
-          </div>
-          <div class="detalle-evento">
-            <h3>Tecnologias del futuro</h3>
-            <p><i class="far fa-clock"></i> 17:00</p>
-            <p><i class="fa fa-calendar"></i> 10 Dic</p>
-            <p><i class="fa fa-user"></i> Wiggo Solis</p>
-          </div>
-          <a href="/calendario" class="btn btn-primario">Ver todos</a>
-        </div> -->
-
-        <!-- <div id="seminarios" class="info-curso ocultar">
-          <div class="detalle-evento">
-            <h3>Diseño UI/UX para móviles</h3>
-            <p><i class="far fa-clock"></i> 17:00</p>
-            <p><i class="fa fa-calendar"></i> 11 Dic</p>
-            <p><i class="fa fa-user"></i> Alba Solis</p>
-          </div>
-          <div class="detalle-evento">
-            <h3>Aprende a programar en una mañana</h3>
-            <p><i class="far fa-clock"></i> 10:00</p>
-            <p><i class="fa fa-calendar"></i> 11 Dic</p>
-            <p><i class="fa fa-user"></i> Musa Mendoza</p>
-          </div>
-          <a href="/calendario" class="btn btn-primario">Ver todos</a>
-        </div> -->
       </div>
     </div>
   </div>
