--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@ crossorigin=""/>
 
 <%- include('./includes/index/programa.ejs') %>
 
-<%- include('./includes/invitados/invitado-lightbox.ejs',{invitados}) %>
+<%- include('./includes/invitados/invitado-lightbox.ejs') %>
 
 <%- include('./includes/index/contador.ejs') %>
 
