--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -43,7 +43,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                 <div class="orden">
                   <label for="pase-dia">Boletos</label>
-                  <input type="number" id="pase-dia" name="boletos" placeholder ="0" size="3" value="1">
+                  <input type="number" id="pase-dia" name="pase_undia" placeholder ="0" size="3" value="1">
                   
                 </div>
               </ul>
@@ -59,7 +59,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                   <div class="orden">
                     <label for="pase-completo">Boletos</label>
-                    <input type="number" id="pase-completo" name="boletos" placeholder = "0" size="3">
+                    <input type="number" id="pase-completo" name="pase_completo" placeholder = "0" size="3">
                   </div>
               </ul>
             </div>
@@ -74,7 +74,7 @@
                 <li><i class="fas fa-check"></i> Todos los talleres</li>
                 <div class="orden">
                   <label for="pase-dosdias">Boletos</label>
-                  <input type="number" id="pase-dosdias" name="boletos" placeholder = "0" size="3" value="2">
+                  <input type="number" id="pase-dosdias" name="pase_2dias" placeholder = "0" size="3" value="2">
                 </div>
               </ul>
             </div>
