--- a/views/includes/navegacion.ejs
+++ b/views/includes/navegacion.ejs
@@ -3,7 +3,7 @@
     <div class="barra-contenido">
       <div class="logo">
         <a href="/">
-          <img src="img/logo.svg" alt="Logo">
+          <img src="/img/logo.svg" alt="Logo">
         </a>
       </div>
 
@@ -23,4 +23,4 @@
     </div>
   </div>
 </div>
-<script src="js/stickyheader.js"></script>
+<script src="/js/stickyheader.js"></script>
