--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,7 +178,8 @@ p {
       .contenido-header .informacion-evento .fecha, .contenido-header .informacion-evento .ciudad {
         font-size: 2rem; }
     .contenido-header h1.nombre-sitio {
-      font-size: 11.5vh;
+      font-size: 13vh;
+      padding-top: 10rem;
       margin: 0; }
     .contenido-header p.slogan {
       font-size: 3vh; } }
