--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,7 +52,8 @@
       }
     }
     h1.nombre-sitio{
-      font-size: 11.5vh;
+      font-size: 13vh;
+      padding-top:10rem;
       margin: 0;
     }  
     p.slogan{
