--- a/views/calendario.ejs
+++ b/views/calendario.ejs
@@ -21,7 +21,7 @@
       <div class="eventos">
         <% actividades.forEach(actividad => { %>
           <div class="dia">
-            <p class="titulo"><%= actividad.nombre_evento %></p>
+            <p class="titulo"><%= actividad.nombre %></p>
             <p class="hora">
               <i class="fa fa-clock"></i> <%= actividad.horaString  %>
             </p>
