terminamos pagina reservaciones

--- a/views/includes/index/precios.ejs
+++ b/views/includes/index/precios.ejs
@@ -10,7 +10,7 @@
             <li><i class="fas fa-check"></i> Bocadillo Gratis</li>
             <li><i class="fas fa-check"></i> Todas las conferencias</li>
             <li><i class="fas fa-check"></i> Todos los talleres</li>
-            <a href="#" class="btn btn-primario hollow">comprar</a>
+            <a href="/registro" class="btn btn-primario hollow">comprar</a>
           </ul>
         </div>
       </li>
@@ -22,7 +22,7 @@
             <li><i class="fas fa-check"></i> Bocadillo Gratis</li>
             <li><i class="fas fa-check"></i> Todas las conferencias</li>
             <li><i class="fas fa-check"></i> Todos los talleres</li>
-            <a href="#" class="btn btn-primario">comprar</a>
+            <a href="/registro" class="btn btn-primario hollow">comprar</a>
           </ul>
         </div>
       </li>
@@ -34,7 +34,7 @@
             <li><i class="fas fa-check"></i> Bocadillo Gratis</li>
             <li><i class="fas fa-check"></i> Todas las conferencias</li>
             <li><i class="fas fa-check"></i> Todos los talleres</li>
-            <a href="#" class="btn btn-primario hollow">comprar</a>
+            <a href="/registro" class="btn btn-primario hollow">comprar</a>
           </ul>
         </div>
       </li>
